styles.css
:root {
    --main_col : aliceblue;
    --back_col : rgb(5, 5, 10);
    --blue     : rgb(93, 140, 168);

    scroll-behavior: smooth;
}

html, body
{
    height: 100%;
    margin: 0;
    display: flex;
    flex-direction: column;
}
body
{
    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
    text-align: center;
}
h1
{
    margin: 0;
    margin-top: 5vh;
    font-size: 55px;
    text-align: center;
}
h3
{
    font-size: 25px;
}

pre {
    padding: 20px;
    border: 4px solid var(--blue);
    border-radius: 20px;
}
code {
    display: block;
    justify-content: left;
    text-align: left;
    align-items: start;
}

@media (prefers-color-scheme: dark)
{
    body
    {
        color: var(--main_col);
    }
    h1
    {
        color: var(--main_col);
    }
    #content {
        background-image: linear-gradient(to bottom, rgb(15, 15, 20), rgb(5, 5, 10));
    }
    #main-footer {
        background-color: #000000;
      }
}
@media (prefers-color-scheme: light)
{
    body
    {
        background: var(--back_col);
        color: var(--main_col);
    }
    h1
    {
        color: var(--main_col);
    }
    #profile
    {
        border: solid 5px rgb(15, 70, 80);
    }
    #main-footer {
        background-color: #222222;
    }
}

#content
{
    flex: 1;
    display: flex;
    flex-direction: column;
    justify-content: center;
    align-items: center;
    padding: 20px;
    transition: opacity 0.5s ease;
}

.favicon {
    width: 32px;
    height: 32px;
}
.social-link {
    display: inline-block;
    text-decoration: none;

    vertical-align: center;

    border: solid var(--blue) 2px;
    border-radius: 10px;
    padding: 5px;
    padding-top: 10px;
    margin: 0;
    margin-left: 10px;
    margin-right: 10px;
    margin-top: 10px;

    transition: transform ease 0.2s;
}
.social-link:hover {
    transform: translateY(-7px);
}

.text-img-container
{
    display: flex;
    align-items: center;
    margin-top: 20vh;
}
.text-img-container img
{
    max-width: 200px;
    height: auto;
    margin: 0;
}
#description
{
    border: 4px solid var(--blue);
    border-radius: 20px 20px 20px 0px;
    padding: 20px;
    max-width: 400px;
    margin-left: 10px;
    text-align: left;
}
#profile 
{
    border-radius: 20%;
}

#buttons-container {
    display: flex;
    justify-content: center;
    flex-wrap: wrap;
    columns: 2;
    margin-bottom: 30vh;
}

.project {
    margin: 20px;
    width: 352px;
    max-height: 296px;
    padding: 20px;
    border: 2px solid var(--blue);
    border-radius: 25px;

    background: linear-gradient(to bottom right, rgb(11, 36, 51), rgb(20, 20, 35));

    text-decoration: none;
    color: var(--blue);

    overflow: hidden;
}

.sliding {
    margin: 0;
    margin-left: -20px;
    margin-right: -20px;
    margin-bottom: -50px;


    padding: 5px;

    background-color: var(--back_col);

    transition: transform ease 0.2s;
}

.project-title {
    margin: 0;
    margin-top: 10px;
    margin-bottom: 20px;
    height: 20px;

    font-size: 20px;
    color: var(--main_col);
}

.project-image {
    border-radius: 20px;
    object-fit: cover;
}

#footer-bottom {
    background-color: #1f1f1f;
    background-color: rgba(0,0,0,0.32);
    padding: 15px 0 5px;
}

#footer-info {
    text-align: center;
    color: #666;
    padding-bottom: 10px;
    float: none;
}
#footer-source {
    margin: 0;
    margin-left: 20px;
    color: rgb(38, 45, 54);
}

@keyframes blink {
  0% {
    opacity: 1;
  }
  25% {
    opacity: 1;
  }
  50% {
    opacity: 0;
  }
  75% {
    opacity: 0;
  }
}

.navbar {
  margin: 0;
  padding: 5px;

  position: fixed;

  background-color: #000000;

  border: solid;
  border-color: rgb(93, 140, 168);
  border-radius: 0 0 15px 15px;
  border-width: 0 0 3px;

  width: calc(100% - 14px);
  z-index: 1000;
}

.navul {
  display: flex;
  margin: 0;
  padding: 1px;

  list-style-type: none;
}

.navhome {
  display: flex;
  padding: 5px;
  padding-right: 15px;
  padding-left: 8px;

  margin-left: 20px;
  margin-right: 20px;
}

.navli {
  padding: 5px;
}

.navlink {
  text-decoration: none;
}

.navmenu {
  display: none;
  width: 22px;
  height: 22px;
  cursor: pointer;
  cursor: pointer;

  margin-right: 3px;
}

@media (max-width: 1000px) {
  .navul {
    display: block;
  }
  .navli {
    display: flex;
    justify-content: center;
    margin: 0;
    padding: 0;
    border: 0;
    height: 0;
    transition: height 0.2s ease;
    overflow: hidden;
  }
  .navli-show {
    height: 1.5em;
    padding: 5px;
  }
  .navmenu {
    display: block;
  }
}

